Secure the bag alert, MAJOR KEY ALERT!!!
So like, there is real validation that comes through from log in, there is all sorts of css and container changes, and I started the function to gather roles for projects.

--- a/public/css/gunks.css
+++ b/public/css/gunks.css
@@ -166,9 +166,9 @@ tr:nth-child(even) {
 }
 
 /*Top wrapper*/
-.file {
+/*.file {
   position: absolute;
-  /*z-index: 2;*/
+  /*z-index: 2;
   background-color: #ECE3E3;
   left: 30px;
   width: 90%;
@@ -176,7 +176,7 @@ tr:nth-child(even) {
   font-size: 20px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   padding: 20px;
-}
+}*/
 
 /* Style the list inside the menu */
 nav ul {
