--- a/views/login.html
+++ b/views/login.html
@@ -118,6 +118,7 @@
 
                         var favoritemovie = Role;
                         sessionStorage.setItem("favoriteMovie", favoritemovie);
+                        sessionStorage.setItem("UsersProject", ProdID);
                         //console.log(favoritemovie)
 
                         real_pass = Password;
