--- a/views/index.html
+++ b/views/index.html
@@ -22,8 +22,8 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">
-                            Log In
+                        <a class="nav-link" href="#" onclick="window.location = '/';">
+                            Log Out
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
