--- a/views/view_records.html
+++ b/views/view_records.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
-    <body id="view_record" onload="getRecordsURL()" >
+    <body id="view_record" onload="getRecordsURL()" style="background-color: #DFE4E8;">
         <div>
             <h1 id="pageHeader">View Records</h1>
             <h3>Select the record you wish to view.</h3>
