--- a/views/view_surveys.html
+++ b/views/view_surveys.html
@@ -8,7 +8,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
-<body id="view_surveys" onload="getSurveysURL()">
+<body id="view_surveys" onload="getSurveysURL()" style="background-color: #DFE4E8;">
     <div>
         <h1 id="pageHeader">View Surveys</h1>
         <h3>Select the survey you wish to view.</h3>
