--- a/views/login.html
+++ b/views/login.html
@@ -94,7 +94,7 @@
             subd_pass = document.getElementById('pass').value,
                 subd_prod = document.getElementById('prod').value
 
-            var userURL = ('http://localhost:3000/api/users/single/' + subd_prod + '/' + subd_user)
+            var userURL = ('http://18.219.137.210:3000/api/users/single/' + subd_prod + '/' + subd_user)
             //var otherURL = ('http://localhost:3000/api/users/single/A0001/_tjoy')
 
             fetch(userURL)
