--- a/views/view_surveys.html
+++ b/views/view_surveys.html
@@ -58,7 +58,7 @@
         }, false);
 
         function getSurveysURL() { // This is the function that gets the survey info
-            var url = 'http://18.219.137.210:3000/api/surveys/gather/';
+            var url = 'http://18.219.137.210:3000/api/surveys';
             fetch(url) // Connection to api
             .then(surveyList => surveyList.json()) // Transform data into json
             .then(function (data) {
